--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "dev-start": "NODE_ENV=development nodemon -r dotenv/config server.js",
+    "dev": "NODE_ENV=development nodemon -r dotenv/config server.js",
     "client-start": "cd client && npm run start"
   },
   "keywords": [],
